--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <address>
-        <a href="mailto:servicioalcliente@gmail.com" title="Servivio al cliente">ESCRIBANOS</a>
+        <a href="mailto:servicioalcliente@gmail.com" title="Servicio al cliente">ESCRIBANOS</a>
     </address>
 </body>
 </html>
